# convexHull

./: .gitignore  CMakeLists.txt  LICENSE
data/center/: convex_hull_vertices.txt  feasible_filtered_edges.txt  feasible_outer_edges.txt  feasible_p_CoM.txt  feasible_points.txt  feasible_q_configs.txt  final_q_config.txt  inner_approx_hull_vertices.txt  points.py  sample_points.txt  support_polygon_vertices.txt
data/hhh/: convex_hull_vertices.txt  feasible_filtered_vertices.txt  feasible_inner_vertices.txt  feasible_outer_vertices.txt  feasible_p_CoM.txt  feasible_points.txt  feasible_q_configs.txt  inner_approx_hull_vertices.txt  paper_points.py  sample_points.txt
data/hhh2/: convex_hull_vertices.txt  feasible_filtered_vertices.txt  feasible_inner_vertices.txt  feasible_outer_vertices.txt  feasible_p_CoM.txt  feasible_points.txt  feasible_q_configs.txt  final_q_config.txt  inner_approx_hull_vertices.txt  paper_points.py  sample_points.txt
data/hhh3/: convex_hull_vertices.txt  feasible_filtered_edges.txt  feasible_filtered_vertices.txt  feasible_inner_edges.txt  feasible_inner_vertices.txt  feasible_outer_vertices.txt  feasible_p_CoM.txt  feasible_points.txt  feasible_q_configs.txt  inner_approx_hull_vertices.txt  paper_points.py  sample_points.txt
data/hhh4/: convex_hull_vertices.txt  feasible_filtered_edges.txt  feasible_filtered_vertices.txt  feasible_inner_edges.txt  feasible_inner_vertices.txt  feasible_outer_vertices.txt  feasible_p_CoM.txt  feasible_points.txt  feasible_q_configs.txt  inner_approx_hull_vertices.txt  paper_points.py  sample_points.txt  support_polygon_edges.txt
data/left/: convex_hull_vertices.txt  feasible_filtered_edges.txt  feasible_filtered_vertices.txt  feasible_inner_vertices.txt  feasible_outer_edges.txt  feasible_p_CoM.txt  feasible_points.txt  feasible_q_configs.txt  final_q_config.txt  sample_points.txt  (+1 more)
include/: main.hpp
scripts/: InnerApprox.py  innerApproxs.py  points.py
src/: main.cpp
tests/: test_foo.cpp
(+8 files in other folders)
